# gsfw.rs

./: Cargo.toml
examples/codec_example/: Cargo.toml  build.rs
examples/codec_example/proto/: foo.proto
examples/codec_example/src/: codec.rs  main.rs
examples/codec_example/src/pb/: mod.rs  msg.rs
gsfw/: Cargo.toml  README.md
gsfw-derive/: Cargo.toml
gsfw-derive/src/: dirty.rs  lib.rs  protocol.rs  registry.rs
gsfw-util/: Cargo.toml  README.md
gsfw-util/src/: lib.rs  macros.rs
gsfw-util/src/dirty/: _trait.rs  dirty_mark.rs  mod.rs
gsfw-util/src/timer/: error.rs  mod.rs  timer.rs  tw_proto.rs  wheel.rs
gsfw/src/: error.rs  lib.rs
gsfw/src/chanrpc/: broker.rs  calltx.rs  cast.rs  casttx.rs  ctx.rs  mod.rs  receiver.rs  sender.rs
gsfw/src/component/: builder.rs  mod.rs
gsfw/src/gs/: builder.rs  mod.rs
gsfw/src/network/: adaptor.rs  gate.rs  make_agent.rs  mod.rs
gsfw/src/registry/: mod.rs  protocol.rs  registry.rs
src/: error.rs  lib.rs
src/chanrpc/: broker.rs  mod.rs  sender.rs
src/codec/: mod.rs
src/component/: builder.rs  mod.rs
src/network/: agent.rs  make_agent.rs  mod.rs  server.rs
tests/: test_bytes_codec.rs
