[package]
name = "gsfw"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features=["full"] }
tracing = { version = "0.1.30"}
async-trait = "*"
tower = "*"
async-nats = "*"
crossbeam = { version = "0.8.2" }
thiserror = "*"
anyhow = "*"
futures = "*"
pin-project = "*"
bytes = "*"