[package]
name = "gsfw-derive"
version = "0.1.0"
edition = "2021"
authors = ["XiaoZ <zhongxiao0711@gmail.com>"]
license = "Apache-2.0"
description = "game server development utils"
repository = "https://github.com/EequalsMCsquare/gsfw.rs"
keywords = ["game", "game-server"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
proc-macro = true

[dependencies]
anyhow = "1"
quote = "1"
syn = "1"
darling = "0.14"